...
"五行" = "五行";

/* No comment provided by engineer. */
"六十甲子" = "六十甲子";

/* No comment provided by engineer. */
"十二地支" = "十二地支";

/* No comment provided by engineer. */
"十二地支表" = "十二地支表";

/* No comment provided by engineer. */
"十二時辰頌" = "十二時辰頌";
...
"地支" = "地支";

/* No comment provided by engineer. */
"天干" = "天干";

/* No comment provided by engineer. */
"天干地支" = "天干地支";

/* No comment provided by engineer. */
"天干地支相關知識" = "天干地支相關知識";

/* No comment provided by engineer. */
"平旦寅，狂機內有道人身。\n窮苦已經無量劫，不信常擎如意珍。\n若捉物，入迷津，但有纖毫即是塵。\n不著舊時無相貌，外求知識也非真。\n\n日出卯，用處不須生善巧。\n縱使神光照有無，起意便遭魔事擾。\n若施功，終不了，日夜被人我拗。\n不用安排只麼從，何曾心地起煩惱。\n\n食時辰，無明本是釋迦身。\n坐臥不知原是道，只麼忙忙受苦辛。\n認聲色，覓疏親，只是他家染污人。\n若擬將心求佛道，問取虛空始出塵。\n\n禺中巳，未了之人教不至。\n假饒通達祖師言，莫向心頭安了義。\n只守玄，沒文字，認著依前還不是。\n暫時自肯不追尋，曠劫不遭魔境使。\n\n日南午，四大身中無價寶。\n陽焰空花不肯拋，作意修行轉辛苦。\n不曾迷，莫求悟，任爾朝陽幾回暮。\n有相身中無相身，無明路上無生路。\n\n日昳未，心地何曾安了義？\n他家文字沒親疏，勿起功夫求的意。\n任縱橫，絕忌諱，長在人間不居世。\n
...
